--- a/projects.html
+++ b/projects.html
@@ -331,8 +331,8 @@
                                 class="project-form__input" required>
                             <input type="text" name="project-form-company" id="project-form-company"
                                 placeholder="Компания" class="project-form__input">
-                            <input type="email" name="project-form-email*" id="project-form-email"
-                                placeholder="Электронная почта" placeholder="Имя" class="project-form__input" required>
+                            <input type="email" name="project-form-email" id="project-form-email"
+                                placeholder="Электронная почта*" placeholder="Имя" class="project-form__input" required>
                             <input type="tel" name="project-form-tel" id="project-form-tel" placeholder="Телефон*"
                                 class="project-form__input" required>
                         </div>
