--- a/portfolio.html
+++ b/portfolio.html
@@ -191,7 +191,7 @@
 
     </footer>
 
-    <script src="scripts/projects.js"></script>
+    <script src="scripts/portfolio.js"></script>
 </body>
 
 </html>
