feat: add sections tracking-systems and equipment

--- a/vr.html
+++ b/vr.html
@@ -46,31 +46,83 @@
     </header>
     <main class="content">
         <section class="supplementary-cards block-indent">
-                <ul class="supplementary-cards__card-container">
-                    <li class="supplementary-cards__card">
-                        <div class="supplementary-cards__card-img-wrapper">
-                            <img src="images/icon_chat_bots.svg" alt="Независимая команда специалистов."
-                                class="supplementary-cards__card-img">
-                        </div>
-                        <p class="supplementary-cards__card-text">Независимая команда специалистов: программистов, дизайнеров, инженеров</p>
-                    </li>
-                    <li class="supplementary-cards__card">
-                        <div class="supplementary-cards__card-img-wrapper">
-                            <img src="images/icon_ar-vr.svg" alt="Разработки любой сложности." class="supplementary-cards__card-img">
-                        </div>
-                        <p class="supplementary-cards__card-text">Разработки любой сложности: виртуальная и дополненная реальности, мобильные приложения</p>
-                    </li>
-                    <li class="supplementary-cards__card">
-                        <div class="supplementary-cards__card-img-wrapper">
-                            <img src="images/icon_skolkovo.svg" alt="Сколково."
-                                class="supplementary-cards__card-img">
-                        </div>
-                        <p class="supplementary-cards__card-text">Аккредитованный участник инновационного центра «Сколково»</p>
-                    </li>
-                </ul>
+            <ul class="supplementary-cards__card-container">
+                <li class="supplementary-cards__card">
+                    <div class="supplementary-cards__card-img-wrapper">
+                        <img src="images/icon_chat_bots.svg" alt="Независимая команда специалистов."
+                            class="supplementary-cards__card-img">
+                    </div>
+                    <p class="supplementary-cards__card-text">Независимая команда специалистов: программистов,
+                        дизайнеров, инженеров</p>
+                </li>
+                <li class="supplementary-cards__card">
+                    <div class="supplementary-cards__card-img-wrapper">
+                        <img src="images/icon_ar-vr.svg" alt="Разработки любой сложности."
+                            class="supplementary-cards__card-img">
+                    </div>
+                    <p class="supplementary-cards__card-text">Разработки любой сложности: виртуальная и дополненная
+                        реальности, мобильные приложения</p>
+                </li>
+                <li class="supplementary-cards__card">
+                    <div class="supplementary-cards__card-img-wrapper">
+                        <img src="images/icon_skolkovo.svg" alt="Сколково." class="supplementary-cards__card-img">
+                    </div>
+                    <p class="supplementary-cards__card-text">Аккредитованный участник инновационного центра «Сколково»
+                    </p>
+                </li>
+            </ul>
             </div>
         </section>
-        
+        <section class="equipment block-indent">
+            <h2 class="equipment__title">Наше оборудование</h2>
+            <div class="equipment__card-container">
+                <article class="equipment__card">
+                    <div class="equipment__card-description">
+                        <h3 class="equipment__card-title">Oculus Quest 2</h3>
+                        <p class="equipment__card-subtitle">Новейший шлем с&nbsp;контроллерами
+                            от&nbsp;компании Facebook.Работает без проводов, идеально подходит для
+                            симуляторов и&nbsp;образовательных приложений</p>
+                    </div>
+                    <img src="images/oculus_quest_img.png" alt="Квест Окулус." class="equipment__card-image">
+                </article>
+                <article class="equipment__card">
+                    <div class="equipment__card-description">
+                        <h3 class="equipment__card-title">Striker VR</h3>
+                        <p class="equipment__card-subtitle">Виртуальное оружие с&nbsp;эффектом реальной отдачи для
+                            максимально острых ощущений от&nbsp;игрового процесса</p>
+                    </div>
+                    <img src="images/striker_vr_img.png" alt="Страйкер." class="equipment__card-image">
+                </article>
+            </div>
+        </section>
+        <section class="tracking-systems block-indent">
+            <div class="tracking-systems__description-container">
+                <div class="tracking-systems__description">
+                    <h2 class="tracking-systems__title">Системы трекинга</h2>
+                    <p class="tracking-systems__subtitle">Захват движения (Motion Capture) - передавая технология
+                        полного
+                        погружения в виртуальную реальность. Мы работаем со всеми ведущими производителями и их
+                        продуктами.
+                    </p>
+                </div>
+                <img src="images/tracking_systems_img.png" alt="Системы трекинга." class="tracking-systems__image">
+            </div>
+            <ul class="tracking-systems__cards">
+                <li class="tracking-systems__card">
+                    <img src="images/icon_opti-track.svg" alt="Опти-трек." class="tracking-systems__card-image">
+                    <p class="tracking-systems__card-text">Система, на которой создаются голливудские спецэффекты.</p>
+                </li>
+                <li class="tracking-systems__card">
+                    <img src="images/icon_antilatency.svg" alt="Антилатенси." class="tracking-systems__card-image">
+                    <p class="tracking-systems__card-text">Отечественная разработка для VR программ.</p>
+                </li>
+                <li class="tracking-systems__card">
+                    <img src="images/icon_vivepro.svg" alt="Вьюпро." class="tracking-systems__card-image">
+                    <p class="tracking-systems__card-text">Популярное решение для игр, обучения и презентаций.</p>
+                </li>
+            </ul>
+        </section>
+
     </main>
     <footer class="footer">
         <div class="footer__wrapper">
