feat: add section game-dev

--- a/vr.html
+++ b/vr.html
@@ -122,6 +122,39 @@
                 </li>
             </ul>
         </section>
+        <section class="game-dev block-indent">
+            <div class="game-dev__description">
+                <h2 class="game-dev__title">Игровые разработки</h2>
+                <p class="game-dev__subtitle">Основным игровым продуктом VROOM GAMES являются командные виртуальные
+                    квесты с уникальным сюжетом.</p>
+            </div>
+            <div class="game-dev__card-container">
+                <article class="game-dev__card">
+                    <img src="images/mystical_pyramid_img.png" alt="Мистическая пирамида." class="game-dev__card-image">
+                    <h3 class="game-dev__card-title">Мистическая пирамида</h3>
+                    <p class="game-dev__card-subtitle">45-минутное приключение по мотивам фильмов «Мумия», «Индиана
+                        Джонс» и «Лара Крофт». Группа учёных отправляется исследовать тайны древней гробницы,
+                        сталкиваясь с коварными ловушками и потусторонними силами. Игрокам предстоит проявить смекалку,
+                        посоревноваться в меткости, преодолеть страх высоты и замкнутого пространства.</p>
+                </article>
+                <article class="game-dev__card">
+                    <img src="images/insect_invasion_img.png" alt="Вторжение насекомых." class="game-dev__card-image">
+                    <h3 class="game-dev__card-title">Вторжение насекомых</h3>
+                    <p class="game-dev__card-subtitle">Захватывающая история в жанре Sci-Fi длительностью до 1,5 часов.
+                        Космические герои отправляются на далекую межзвёздную базу, превращенную кровожадными мутантами
+                        в гигантский улей. Телепортация, полеты и спецэффекты не имеют аналогов в индустрии, а сложный
+                        игровой процесс привлечет внимание самых опытных геймеров.</p>
+                </article>
+                <article class="game-dev__card">
+                    <img src="images/arena_img.png" alt="Арена." class="game-dev__card-image">
+                    <h3 class="game-dev__card-title">Arena</h3>
+                    <p class="game-dev__card-subtitle">Динамическая турнирная игра для любителей Quake и других
+                        легендарных шутеров, в которой участники сражаются друг против друга на нескольких площадках.
+                        Предусмотрены различные виды оружия. Проект подходит для проведения киберспортивных мероприятий.
+                    </p>
+                </article>
+            </div>
+        </section>
 
     </main>
     <footer class="footer">
