feat: add also section

--- a/vr.html
+++ b/vr.html
@@ -155,6 +155,47 @@
                 </article>
             </div>
         </section>
+        <section class="also block-indent">
+            <h2 class="also__title">А так же…</h2>
+            <div class="also__card-container">
+                <article class="also__card">
+                    <div class="also__card-description">
+                        <h3 class="also__card-title">Мобильные приложения дополнительной реальности</h3>
+                        <p class="also__card-subtitle">Мы разработали систему карточек для школьников и студентов со встроенным контентом, «оживающим» при наведении смартфона</p>
+                        <ul>
+                            <li class="also__card-item">Трехмерная анимация со звуковым сопровождением</li>
+                            <li class="also__card-item">Взаимодействие карточек и встроенных объектов друг с другом</li>
+                            <li class="also__card-item">Возможность выпуска в виде изображений на страницах учебника</li>
+                        </ul>
+                    </div>
+                    <img src="images/mobile_applications_img.png" alt="Мобильные приложения." class="also__card-image">
+                </article>
+                <article class="also__card">
+                    <div class="also__card-description">
+                        <h3 class="also__card-title">Обучающие разработки для производства</h3>
+                        <p class="also__card-subtitle">Технологии позволяют обучать Ваших сотрудников, воссоздавая любой технологический процесс</p>
+                        <ul>
+                            <li class="also__card-item">Имитация действий и внешних ситуаций, взаимодействие с объектом</li>
+                            <li class="also__card-item">Высокоточный перенос масштабов и габаритов в виртуальную реальность</li>
+                            <li class="also__card-item">Экономия средств на использование реальной материально-технической базы</li>
+                        </ul>
+                    </div>
+                    <img src="images/educational_developments_img.png" alt="Обучающие разработки." class="also__card-image">
+                </article>
+                <article class="also__card">
+                    <div class="also__card-description">
+                        <h3 class="also__card-title">Конференции в виртуальной реальности</h3>
+                        <p class="also__card-subtitle">Новый формат удаленной работы позволил нам создать самую удобную и функциональную среду для виртуальных совещаний</p>
+                        <ul>
+                            <li class="also__card-item">Эффект присутствия в одном пространстве сотрудников из разных городов и стран</li>
+                            <li class="also__card-item">Встроенный планировщик задач, офисные программы, экран для презентаций</li>
+                            <li class="also__card-item">Распознание голоса с автоматическое ведение протокола каждой сессии</li>
+                        </ul>
+                    </div>
+                    <img src="images/vr_conferences_img.png" alt="Конференции в виртуальной реальности." class="also__card-image">
+                </article>
+            </div>
+        </section>
 
     </main>
     <footer class="footer">
