feat: add section office

--- a/vr.html
+++ b/vr.html
@@ -161,11 +161,13 @@
                 <article class="also__card">
                     <div class="also__card-description">
                         <h3 class="also__card-title">Мобильные приложения дополнительной реальности</h3>
-                        <p class="also__card-subtitle">Мы разработали систему карточек для школьников и студентов со встроенным контентом, «оживающим» при наведении смартфона</p>
+                        <p class="also__card-subtitle">Мы разработали систему карточек для школьников и студентов
+                            со встроенным контентом, «оживающим» при наведении смартфона</p>
                         <ul>
                             <li class="also__card-item">Трехмерная анимация со звуковым сопровождением</li>
                             <li class="also__card-item">Взаимодействие карточек и встроенных объектов друг с другом</li>
-                            <li class="also__card-item">Возможность выпуска в виде изображений на страницах учебника</li>
+                            <li class="also__card-item">Возможность выпуска в виде изображений на страницах учебника
+                            </li>
                         </ul>
                     </div>
                     <img src="images/mobile_applications_img.png" alt="Мобильные приложения." class="also__card-image">
@@ -173,30 +175,62 @@
                 <article class="also__card">
                     <div class="also__card-description">
                         <h3 class="also__card-title">Обучающие разработки для производства</h3>
-                        <p class="also__card-subtitle">Технологии позволяют обучать Ваших сотрудников, воссоздавая любой технологический процесс</p>
+                        <p class="also__card-subtitle">Технологии позволяют обучать Ваших сотрудников, воссоздавая любой
+                            технологический процесс</p>
                         <ul>
-                            <li class="also__card-item">Имитация действий и внешних ситуаций, взаимодействие с объектом</li>
-                            <li class="also__card-item">Высокоточный перенос масштабов и габаритов в виртуальную реальность</li>
-                            <li class="also__card-item">Экономия средств на использование реальной материально-технической базы</li>
+                            <li class="also__card-item">Имитация действий и внешних ситуаций, взаимодействие с объектом
+                            </li>
+                            <li class="also__card-item">Высокоточный перенос масштабов и габаритов в виртуальную
+                                реальность</li>
+                            <li class="also__card-item">Экономия средств на использование реальной
+                                материально-технической базы</li>
                         </ul>
                     </div>
-                    <img src="images/educational_developments_img.png" alt="Обучающие разработки." class="also__card-image">
+                    <img src="images/educational_developments_img.png" alt="Обучающие разработки."
+                        class="also__card-image">
                 </article>
                 <article class="also__card">
                     <div class="also__card-description">
                         <h3 class="also__card-title">Конференции в виртуальной реальности</h3>
-                        <p class="also__card-subtitle">Новый формат удаленной работы позволил нам создать самую удобную и функциональную среду для виртуальных совещаний</p>
+                        <p class="also__card-subtitle">Новый формат удаленной работы позволил нам создать самую удобную
+                            и функциональную среду для виртуальных совещаний</p>
                         <ul>
-                            <li class="also__card-item">Эффект присутствия в одном пространстве сотрудников из разных городов и стран</li>
-                            <li class="also__card-item">Встроенный планировщик задач, офисные программы, экран для презентаций</li>
-                            <li class="also__card-item">Распознание голоса с автоматическое ведение протокола каждой сессии</li>
+                            <li class="also__card-item">Эффект присутствия в одном пространстве сотрудников из разных
+                                городов и стран</li>
+                            <li class="also__card-item">Встроенный планировщик задач, офисные программы, экран для
+                                презентаций</li>
+                            <li class="also__card-item">Распознание голоса с автоматическое ведение протокола каждой
+                                сессии</li>
                         </ul>
                     </div>
-                    <img src="images/vr_conferences_img.png" alt="Конференции в виртуальной реальности." class="also__card-image">
+                    <img src="images/vr_conferences_img.png" alt="Конференции в виртуальной реальности."
+                        class="also__card-image">
                 </article>
             </div>
         </section>
+        <section class="office block-indent">
+            <div class="office__description">
+                <h2 class="office__title">Офис и демонстрационный зал VRoom Games</h2>
+                <p class="office__subtitle">Мы всегда рады видеть гостей, клиентов и партнеров в клубе Vroom Games
+                    в самом центре Санкт-Петербурга, на Литовском проспекте, д. 50 к 2. Здесь можно не только
+                    ознакомиться с нашими технологиями, но и приятно провести время в баре, за игрой в бильярд,
+                    настольный теннис и приставки.</p>
+            </div>
+            <div class="office__video">
+                <iframe src="https://www.youtube.com/embed/vvXQby8Eek0" title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen class="office__iframe"></iframe>
+            </div>
+            <img src="images/office_vrg_2_img.png" alt="Офис и демонстрационный зал."
+                class="office__image office__image_place_left">
+            <img src="images/office_vrg_3_img.png" alt="Офис и демонстрационный зал."
+                class="office__image office__image_place_center">
+            <img src="images/office_vrg_4_img.png" alt="Офис и демонстрационный зал."
+                class="office__image office__image_place_right">
+        </section>
+        <section class="offer">
 
+        </section>
     </main>
     <footer class="footer">
         <div class="footer__wrapper">
