feat: add section offer

--- a/vr.html
+++ b/vr.html
@@ -163,7 +163,7 @@
                         <h3 class="also__card-title">Мобильные приложения дополнительной реальности</h3>
                         <p class="also__card-subtitle">Мы разработали систему карточек для школьников и студентов
                             со встроенным контентом, «оживающим» при наведении смартфона</p>
-                        <ul>
+                        <ul class="also__card-items">
                             <li class="also__card-item">Трехмерная анимация со звуковым сопровождением</li>
                             <li class="also__card-item">Взаимодействие карточек и встроенных объектов друг с другом</li>
                             <li class="also__card-item">Возможность выпуска в виде изображений на страницах учебника
@@ -177,7 +177,7 @@
                         <h3 class="also__card-title">Обучающие разработки для производства</h3>
                         <p class="also__card-subtitle">Технологии позволяют обучать Ваших сотрудников, воссоздавая любой
                             технологический процесс</p>
-                        <ul>
+                        <ul class="also__card-items">
                             <li class="also__card-item">Имитация действий и внешних ситуаций, взаимодействие с объектом
                             </li>
                             <li class="also__card-item">Высокоточный перенос масштабов и габаритов в виртуальную
@@ -194,7 +194,7 @@
                         <h3 class="also__card-title">Конференции в виртуальной реальности</h3>
                         <p class="also__card-subtitle">Новый формат удаленной работы позволил нам создать самую удобную
                             и функциональную среду для виртуальных совещаний</p>
-                        <ul>
+                        <ul class="also__card-items">
                             <li class="also__card-item">Эффект присутствия в одном пространстве сотрудников из разных
                                 городов и стран</li>
                             <li class="also__card-item">Встроенный планировщик задач, офисные программы, экран для
@@ -229,7 +229,17 @@
                 class="office__image office__image_place_right">
         </section>
         <section class="offer">
-
+            <div class="offer__content">
+                <h2 class="offer__title">Будем рады сотрудничеству!</h2>
+                <p class="offer__subtitle">Наше предложение</p>
+                <ul class="offer__items">
+                    <li class="offer__item">Организация постановок и обслуживания компьютерной техники и VR систем</li>
+                    <li class="offer__item">Разработка программного обеспечения любой сложности</li>
+                    <li class="offer__item">Франшиза игрового заведения стоимостью от 3 млн. руб.«под ключ»</li>
+                </ul>
+                <p class="offer__contacts">Контактный телефон: <span class="offer__tel">+7 (812) 920-50-80</span></p>
+                <button type="button" class="button-vroom">vroomgames.ru</button>
+            </div>
         </section>
     </main>
     <footer class="footer">
