feat: add adaptive version of page

--- a/vr.html
+++ b/vr.html
@@ -51,6 +51,8 @@
                     <div class="supplementary-cards__card-img-wrapper">
                         <img src="images/icon_chat_bots.svg" alt="Независимая команда специалистов."
                             class="supplementary-cards__card-img">
+                        <img src="images/icon_independant_team.svg" alt="Независимая команда специалистов."
+                            class="supplementary-cards__card-img-mobile">
                     </div>
                     <p class="supplementary-cards__card-text">Независимая команда специалистов: программистов,
                         дизайнеров, инженеров</p>
@@ -59,6 +61,8 @@
                     <div class="supplementary-cards__card-img-wrapper">
                         <img src="images/icon_ar-vr.svg" alt="Разработки любой сложности."
                             class="supplementary-cards__card-img">
+                        <img src="images/icon_vr.svg" alt="Разработки любой сложности."
+                            class="supplementary-cards__card-img-mobile">
                     </div>
                     <p class="supplementary-cards__card-text">Разработки любой сложности: виртуальная и дополненная
                         реальности, мобильные приложения</p>
@@ -66,6 +70,7 @@
                 <li class="supplementary-cards__card">
                     <div class="supplementary-cards__card-img-wrapper">
                         <img src="images/icon_skolkovo.svg" alt="Сколково." class="supplementary-cards__card-img">
+                        <img src="images/icon_skolkovo_2.svg" alt="Сколково." class="supplementary-cards__card-img-mobile">
                     </div>
                     <p class="supplementary-cards__card-text">Аккредитованный участник инновационного центра «Сколково»
                     </p>
