fix: add heading and footer links

--- a/career.html
+++ b/career.html
@@ -38,7 +38,7 @@
             <p class="page-header__subtitle">Карьера</p>
             <p class="page-header__description">Присоединяйтесь к команде победителей, способных решать масштабные
                 нешаблонные задачи, достойные лучших умов отрасли.</p>
-            <button type="button" class="button-resume-order button-resume-order_place_resumes">Узнать
+            <button type="button" class="button-read-more button-read-more_place_career">Узнать
                 больше</button>
         </div>
     </header>
