feat: add heading-links

--- a/vr.html
+++ b/vr.html
@@ -12,23 +12,29 @@
 <body class="root">
     <header class="page-header page-header_place_vroom block-indent">
         <div class="heading">
-            <a href="#" class="heading__logo-link">
-                <img src="images/logo_ust.svg" alt="логотип" class="heading__logo">
+            <a href="#" target="_blank" class="heading__logo-link">
+                <img src="images/logo_ust.svg" alt="Логотип." class="heading__logo">
                 <h2 lang="en" class="heading__logo-title">Union Smart Technology</h2>
                 <p lang="en" class="heading__logo-subtitle">Simple solutions for complex problems</p>
             </a>
             <nav class="heading__menu">
                 <ul class="heading__menu-links">
-                    <li class="heading__menu-item"><a href="#" class="heading__menu-link">Главная</a></li>
-                    <li class="heading__menu-item"><a href="#" class="heading__menu-link">Команда</a></li>
-                    <li class="heading__menu-item"><a href="#" class="heading__menu-link">Услуги</a></li>
-                    <li class="heading__menu-item"><a href="#" class="heading__menu-link">Карьера</a></li>
-                    <li class="heading__menu-item"><a href="#" class="heading__menu-link">Портфолио</a></li>
-                    <li class="heading__menu-item"><a href="#" class="heading__menu-link">Контакты</a></li>
+                    <li class="heading__menu-item"><a href="index.html" target="_blank" class="heading__menu-link">Главная</a>
+                    </li>
+                    <li class="heading__menu-item"><a href="team.html" target="_blank" class="heading__menu-link">Команда</a>
+                    </li>
+                    <li class="heading__menu-item"><a href="projects.html" target="_blank" class="heading__menu-link">Услуги</a>
+                    </li>
+                    <li class="heading__menu-item"><a href="career.html" target="_blank" class="heading__menu-link">Карьера</a>
+                    </li>
+                    <li class="heading__menu-item"><a href="portfolio.html" target="_blank" class="heading__menu-link">Портфолио</a>
+                    </li>
+                    <li class="heading__menu-item"><a href="contact.html" target="_blank" class="heading__menu-link">Контакты</a>
+                    </li>
                 </ul>
-                <button type="button" class="heading__burger-menu" aria-label="кнопка_меню"></button>
-                <a href="#" class="heading__menu-lang-link" aria-label="ссылка_на_перевод_страницы"></a>
-                <form action="" class="heading__search-form">
+                <button type="button" class="heading__burger-menu" aria-label="Кнопка меню."></button>
+                <a href="#" target="_blank" class="heading__menu-lang-link" aria-label="Перевод страницы."></a>
+                <form action="#" class="heading__search-form">
                     <input type="search" class="heading__search-box">
                     <i class="heading__search-icon"></i>
                 </form>
